--- a/pppppp/View/TimelineView/TimelinePostCell/TimelinePostCollectionViewCell.xib
+++ b/pppppp/View/TimelineView/TimelinePostCell/TimelinePostCollectionViewCell.xib
@@ -16,98 +16,100 @@
         <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner"/>
         <placeholder placeholderIdentifier="IBFirstResponder" id="-2" customClass="UIResponder"/>
         <collectionViewCell opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" id="gTV-IL-0wX" customClass="TimelinePostCollectionViewCell" customModule="pppppp" customModuleProvider="target">
-            <rect key="frame" x="0.0" y="0.0" width="366" height="104"/>
+            <rect key="frame" x="0.0" y="0.0" width="366" height="142"/>
             <autoresizingMask key="autoresizingMask"/>
             <view key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center">
-                <rect key="frame" x="0.0" y="0.0" width="366" height="104"/>
+                <rect key="frame" x="0.0" y="0.0" width="366" height="142"/>
                 <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                 <subviews>
-                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="right" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="mph-eG-fuZ">
-                        <rect key="frame" x="302.66666666666669" y="16" width="47.333333333333314" height="17"/>
-                        <fontDescription key="fontDescription" name="F5.6-Regular" family="F5.6" pointSize="14"/>
-                        <color key="textColor" name="white50"/>
-                        <nil key="highlightedColor"/>
-                    </label>
-                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="HPm-nM-2Z8">
-                        <rect key="frame" x="96" y="20" width="41.333333333333343" height="20.333333333333329"/>
-                        <fontDescription key="fontDescription" type="system" weight="medium" pointSize="16"/>
-                        <color key="textColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
-                        <nil key="highlightedColor"/>
-                    </label>
-                    <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="NlN-dq-lcz">
-                        <rect key="frame" x="16" y="20" width="64" height="64"/>
+                    <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="Lac-kG-2io">
+                        <rect key="frame" x="16" y="8" width="334" height="126"/>
+                        <subviews>
+                            <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="NlN-dq-lcz">
+                                <rect key="frame" x="16" y="16" width="32" height="32"/>
+                                <constraints>
+                                    <constraint firstAttribute="height" constant="32" id="6J2-xd-Ec1"/>
+                                    <constraint firstAttribute="width" constant="32" id="UHE-sf-G2u"/>
+                                </constraints>
+                            </imageView>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="N7K-qn-CU9">
+                                <rect key="frame" x="80" y="83.666666666666671" width="120" height="26.333333333333329"/>
+                                <constraints>
+                                    <constraint firstAttribute="width" constant="120" id="uzE-6g-X1W"/>
+                                </constraints>
+                                <fontDescription key="fontDescription" type="system" weight="semibold" pointSize="22"/>
+                                <color key="textColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                                <nil key="highlightedColor"/>
+                            </label>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="HPm-nM-2Z8">
+                                <rect key="frame" x="56" y="22" width="41.333333333333343" height="20"/>
+                                <fontDescription key="fontDescription" type="system" weight="semibold" pointSize="16"/>
+                                <color key="textColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                                <nil key="highlightedColor"/>
+                            </label>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="hZW-UM-4eA">
+                                <rect key="frame" x="236" y="83.333333333333329" width="74" height="27"/>
+                                <fontDescription key="fontDescription" name="F5.6-Regular" family="F5.6" pointSize="22"/>
+                                <color key="textColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                                <nil key="highlightedColor"/>
+                            </label>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="right" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="mph-eG-fuZ">
+                                <rect key="frame" x="270.66666666666669" y="16" width="47.333333333333314" height="17"/>
+                                <fontDescription key="fontDescription" name="F5.6-Regular" family="F5.6" pointSize="14"/>
+                                <color key="textColor" name="white50"/>
+                                <nil key="highlightedColor"/>
+                            </label>
+                            <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="4uS-zr-ceC">
+                                <rect key="frame" x="16" y="62" width="48" height="48"/>
+                                <color key="tintColor" name="white00"/>
+                                <constraints>
+                                    <constraint firstAttribute="width" constant="48" id="Cr4-6x-vua"/>
+                                    <constraint firstAttribute="height" constant="48" id="U6V-88-vkN"/>
+                                </constraints>
+                            </imageView>
+                        </subviews>
+                        <color key="backgroundColor" red="0.72156862745098038" green="0.9137254901960784" blue="1" alpha="0.32000000000000001" colorSpace="custom" customColorSpace="sRGB"/>
                         <constraints>
-                            <constraint firstAttribute="height" constant="64" id="bHw-1p-5iP"/>
-                            <constraint firstAttribute="width" constant="64" id="gGL-M1-ida"/>
-                        </constraints>
-                    </imageView>
-                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="hZW-UM-4eA">
-                        <rect key="frame" x="268" y="50.666666666666664" width="74" height="26.666666666666664"/>
-                        <fontDescription key="fontDescription" name="F5.6-Regular" family="F5.6" pointSize="22"/>
-                        <color key="textColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
-                        <nil key="highlightedColor"/>
-                    </label>
-                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="N7K-qn-CU9">
-                        <rect key="frame" x="136" y="51.333333333333336" width="54.666666666666657" height="25.333333333333336"/>
-                        <fontDescription key="fontDescription" type="system" weight="semibold" pointSize="22"/>
-                        <color key="textColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
-                        <nil key="highlightedColor"/>
-                    </label>
-                    <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="qvb-BC-HpF">
-                        <rect key="frame" x="0.0" y="103" width="366" height="1"/>
-                        <color key="backgroundColor" name="lightBlue25"/>
-                        <constraints>
-                            <constraint firstAttribute="height" constant="1" id="fQa-Wg-k69"/>
+                            <constraint firstItem="N7K-qn-CU9" firstAttribute="centerY" secondItem="hZW-UM-4eA" secondAttribute="centerY" id="18u-ng-jVl"/>
+                            <constraint firstItem="NlN-dq-lcz" firstAttribute="top" secondItem="Lac-kG-2io" secondAttribute="top" constant="16" id="3kd-Oa-oIh"/>
+                            <constraint firstItem="NlN-dq-lcz" firstAttribute="centerY" secondItem="HPm-nM-2Z8" secondAttribute="centerY" id="4Jh-Nl-v3e"/>
+                            <constraint firstItem="4uS-zr-ceC" firstAttribute="bottom" secondItem="N7K-qn-CU9" secondAttribute="bottom" id="BC6-Ys-VuE"/>
+                            <constraint firstItem="NlN-dq-lcz" firstAttribute="leading" secondItem="Lac-kG-2io" secondAttribute="leading" constant="16" id="EX0-WB-3qN"/>
+                            <constraint firstAttribute="bottom" secondItem="4uS-zr-ceC" secondAttribute="bottom" constant="16" id="T6R-A1-BNJ"/>
+                            <constraint firstAttribute="trailing" secondItem="mph-eG-fuZ" secondAttribute="trailing" constant="16" id="UBK-Dn-Wuc"/>
+                            <constraint firstAttribute="trailing" secondItem="hZW-UM-4eA" secondAttribute="trailing" constant="24" id="X7C-Pu-Psk"/>
+                            <constraint firstItem="N7K-qn-CU9" firstAttribute="leading" secondItem="4uS-zr-ceC" secondAttribute="trailing" constant="16" id="aRt-lB-4cq"/>
+                            <constraint firstItem="4uS-zr-ceC" firstAttribute="leading" secondItem="Lac-kG-2io" secondAttribute="leading" constant="16" id="hCd-Pn-Bz7"/>
+                            <constraint firstItem="HPm-nM-2Z8" firstAttribute="leading" secondItem="NlN-dq-lcz" secondAttribute="trailing" constant="8" id="j4r-av-ryx"/>
+                            <constraint firstItem="mph-eG-fuZ" firstAttribute="top" secondItem="Lac-kG-2io" secondAttribute="top" constant="16" id="paJ-D2-3CI"/>
                         </constraints>
                     </view>
-                    <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="4uS-zr-ceC">
-                        <rect key="frame" x="88" y="44" width="40" height="40"/>
-                        <color key="tintColor" name="subColor"/>
-                        <constraints>
-                            <constraint firstAttribute="width" constant="40" id="1CJ-xB-Eod"/>
-                            <constraint firstAttribute="height" constant="40" id="x3o-rb-8L7"/>
-                        </constraints>
-                    </imageView>
                 </subviews>
             </view>
             <viewLayoutGuide key="safeArea" id="ZTg-uK-7eu"/>
             <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
             <constraints>
-                <constraint firstItem="NlN-dq-lcz" firstAttribute="centerY" secondItem="gTV-IL-0wX" secondAttribute="centerY" id="5f7-EI-5ND"/>
-                <constraint firstItem="NlN-dq-lcz" firstAttribute="centerY" secondItem="gTV-IL-0wX" secondAttribute="centerY" id="9xf-zp-CZz"/>
-                <constraint firstItem="4uS-zr-ceC" firstAttribute="centerY" secondItem="N7K-qn-CU9" secondAttribute="centerY" id="DHJ-7g-8o9"/>
-                <constraint firstItem="HPm-nM-2Z8" firstAttribute="leading" secondItem="NlN-dq-lcz" secondAttribute="trailing" constant="16" id="LfP-sO-cGj"/>
-                <constraint firstItem="N7K-qn-CU9" firstAttribute="centerY" secondItem="hZW-UM-4eA" secondAttribute="centerY" id="Nqq-Ua-PiG"/>
-                <constraint firstItem="NlN-dq-lcz" firstAttribute="leading" secondItem="gTV-IL-0wX" secondAttribute="leading" constant="16" id="OFv-Jj-dN0"/>
-                <constraint firstAttribute="trailing" secondItem="hZW-UM-4eA" secondAttribute="trailing" constant="24" id="Ttk-IX-UOE"/>
-                <constraint firstItem="NlN-dq-lcz" firstAttribute="top" secondItem="HPm-nM-2Z8" secondAttribute="top" id="VO2-rJ-KzR"/>
-                <constraint firstAttribute="trailing" secondItem="qvb-BC-HpF" secondAttribute="trailing" id="WNC-0u-lVy"/>
-                <constraint firstItem="NlN-dq-lcz" firstAttribute="bottom" secondItem="4uS-zr-ceC" secondAttribute="bottom" id="aGx-4Q-eeR"/>
-                <constraint firstItem="mph-eG-fuZ" firstAttribute="top" secondItem="gTV-IL-0wX" secondAttribute="top" constant="16" id="cjz-qu-CQr"/>
-                <constraint firstAttribute="bottom" secondItem="qvb-BC-HpF" secondAttribute="bottom" id="dpt-tU-s7j"/>
-                <constraint firstItem="qvb-BC-HpF" firstAttribute="leading" secondItem="gTV-IL-0wX" secondAttribute="leading" id="gOc-pb-IgC"/>
-                <constraint firstItem="N7K-qn-CU9" firstAttribute="leading" secondItem="4uS-zr-ceC" secondAttribute="trailing" constant="8" id="hGk-1w-hwd"/>
-                <constraint firstItem="4uS-zr-ceC" firstAttribute="leading" secondItem="NlN-dq-lcz" secondAttribute="trailing" constant="8" id="jYR-au-XgE"/>
-                <constraint firstAttribute="trailing" secondItem="mph-eG-fuZ" secondAttribute="trailing" constant="16" id="kck-Wf-tl2"/>
+                <constraint firstAttribute="bottom" secondItem="Lac-kG-2io" secondAttribute="bottom" constant="8" id="6Cs-G9-XNy"/>
+                <constraint firstItem="Lac-kG-2io" firstAttribute="leading" secondItem="gTV-IL-0wX" secondAttribute="leading" constant="16" id="irG-C1-ECb"/>
+                <constraint firstItem="Lac-kG-2io" firstAttribute="top" secondItem="gTV-IL-0wX" secondAttribute="top" constant="8" id="jSM-ht-GkE"/>
+                <constraint firstAttribute="trailing" secondItem="Lac-kG-2io" secondAttribute="trailing" constant="16" id="jfa-wi-Dae"/>
             </constraints>
-            <size key="customSize" width="366" height="104"/>
+            <size key="customSize" width="366" height="142"/>
             <connections>
                 <outlet property="activityImageView" destination="4uS-zr-ceC" id="pTN-wU-eo9"/>
                 <outlet property="activityLabel" destination="N7K-qn-CU9" id="4kl-xn-7xa"/>
+                <outlet property="backgroundColorView" destination="Lac-kG-2io" id="w4F-ci-h5L"/>
                 <outlet property="dateLabel" destination="mph-eG-fuZ" id="9co-c4-VEB"/>
                 <outlet property="pointLabel" destination="hZW-UM-4eA" id="YLT-qG-ldj"/>
                 <outlet property="userIconImageView" destination="NlN-dq-lcz" id="HJz-EA-o8n"/>
                 <outlet property="userNameLabel" destination="HPm-nM-2Z8" id="Hpo-WH-gCf"/>
             </connections>
-            <point key="canvasLocation" x="173.84615384615384" y="13.507109004739336"/>
+            <point key="canvasLocation" x="173.84615384615384" y="17.061611374407583"/>
         </collectionViewCell>
     </objects>
     <resources>
-        <namedColor name="lightBlue25">
-            <color red="0.72200000286102295" green="0.91399997472763062" blue="1" alpha="0.25" colorSpace="custom" customColorSpace="sRGB"/>
-        </namedColor>
-        <namedColor name="subColor">
-            <color red="0.56499999761581421" green="0.69800001382827759" blue="0.82700002193450928" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+        <namedColor name="white00">
+            <color red="1" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
         </namedColor>
         <namedColor name="white50">
             <color red="1" green="1" blue="1" alpha="0.5" colorSpace="custom" customColorSpace="sRGB"/>
